Fix error when loading minecraft version pre 1.14 Fixes: #579